<resources>
    <string name="app_name">TaskAppLearn</string>
    <string name="txt_1">تسک سنج</string>
    <string name="txt_2">بااپلیکیشن تسک سنج کارهاتومدیریت کن</string>
    <string name="img2_txt">img2_txt</string>
    <string name="text2_txt">text2_txt</string>
    <string name="text1_txt">text1_txt</string>
    <string name="mange_task">مدیریت وظایف</string>
    <string name="true_work">کارهای انجام شده</string>
    <string name="false_work">کارهای انجام نشده</string>
    <string name="todo">todo</string>
    <string name="add_task">اضافه کردن وظیفه</string>
    <string name="hint_task">وظیفه را وارد کنید</string>
    <string name="save">دخیره کردن</string>
    <string name="cancel">کنسل کردن</string>
    <string name="delete">حذف کردن</string>
    <string name="are_you_sure">ایا از حذف این ایتم مطمعن هستید؟</string>


</resources>